--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "karma-sourcemap-writer": "^0.1.2",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
+    "ng2-redux": "^3.3.2",
     "redux": "^3.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "^5.0.0-beta.0",
@@ -43,6 +44,7 @@
     "@angular/compiler": "^2.0.0-rc.2",
     "@angular/core": "^2.0.0-rc.2",
     "@angular/forms": "^0.2.0",
+    "ng2-redux": "^3.3.2",
     "redux": "^3.0",
     "rxjs": "^5.0.0-beta.0",
     "zone.js": "^0.5.15"
