--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "karma-webpack": "^1.7.0",
     "ng2-redux": "^3.3.2",
     "redux": "^3.0",
+    "redux-logger": "^2.6.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "^5.0.0-beta.0",
     "ts-helpers": "^1.1.1",
