--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "rxjs": "^5.0.0-beta.0",
     "ts-helpers": "^1.1.1",
     "typings": "^1.0",
+    "webpack-dev-middleware": "^1.6.1",
     "zone.js": "^0.6.12"
   },
   "peerDependencies": {
