--- a/package.json
+++ b/package.json
@@ -63,5 +63,6 @@
     "posttest": "npm run cover",
     "test:watch": "cross-env NODE_ENV=development karma start --singleRun false",
     "typings": "rimraf typings && typings install"
-  }
+  },
+  "main": "dist/main.js"
 }
