--- a/examples/package.json
+++ b/examples/package.json
@@ -12,5 +12,8 @@
     "html-webpack-plugin": "^2.22.0",
     "raw-loader": "^0.5.1",
     "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "cross-env": "^2.0.0"
   }
 }
