--- a/examples/package.json
+++ b/examples/package.json
@@ -11,9 +11,7 @@
     "@angular/router": "^3.0.0-beta.2",
     "html-webpack-plugin": "^2.22.0",
     "raw-loader": "^0.5.1",
+    "cross-env": "^2.0.0",
     "webpack-dev-server": "^1.14.1"
-  },
-  "dependencies": {
-    "cross-env": "^2.0.0"
   }
 }
