--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 {
   "name": "ng2-redux-form",
   "description": "Build Angular 2 forms with Redux",
-  "dependencies": {
-    "cross-env": "^2.0.0",
-    "rimraf": "^2.5.4",
-    "webpack": "^1.13.1"
-  },
   "devDependencies": {
     "@angular/common": "^2.0.0-rc.2",
     "@angular/compiler": "^2.0.0-rc.2",
@@ -13,9 +8,10 @@
     "@angular/forms": "^0.2.0",
     "@angular/platform-browser": "^2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
-    "awesome-typescript-loader": "1.0.0",
+    "awesome-typescript-loader": "1.1.1",
     "babel-core": "^6.11.4",
     "chai": "^3.5.0",
+    "cross-env": "^2.0.0",
     "immutable": "^3.8.1",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine-core": "^2.4.1",
@@ -33,9 +29,11 @@
     "redux": "^3.0",
     "redux-logger": "^2.6.1",
     "reflect-metadata": "^0.1.3",
+    "rimraf": "^2.5.4",
     "rxjs": "^5.0.0-beta.0",
     "ts-helpers": "^1.1.1",
     "typings": "^1.0",
+    "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "zone.js": "^0.6.12"
   },
