--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "experimentalDecorators": true,
     "sourceMap": false,
     "inlineSourceMap": true,
-    "noEmitHelpers": true
+    "noEmitHelpers": true,
+    "declaration": true
   },
   "awesomeTypescriptLoaderOptions": {
     "emitRequireType": false,
