--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "noEmitHelpers": true,
     "declaration": true,
     "outDir": "dist",
-    "rootDir": "source"
+    "rootDir": ""
   },
   "awesomeTypescriptLoaderOptions": {
     "emitRequireType": false,
@@ -20,6 +20,7 @@
   "exclude": [
     "node_modules",
     "dist",
-    "examples"
+    "examples",
+    "index.d.ts"
   ]
 }
