--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "ng2-redux-form",
   "description": "Build Angular 2 forms with Redux",
   "devDependencies": {
-    "@angular/common": "^2.0.0-rc.5",
-    "@angular/compiler": "^2.0.0-rc.5",
-    "@angular/core": "^2.0.0-rc.5",
-    "@angular/forms": "^0.3.0",
-    "@angular/platform-browser": "^2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
+    "@angular/common": "2.0.0-rc.6",
+    "@angular/compiler": "2.0.0-rc.6",
+    "@angular/core": "2.0.0-rc.6",
+    "@angular/forms": "2.0.0-rc.6",
+    "@angular/platform-browser": "2.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
     "awesome-typescript-loader": "1.1.1",
     "babel-core": "^6.11.4",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
     "cross-env": "^2.0.0",
     "immutable": "^3.8.1",
@@ -33,7 +35,7 @@
     "rxjs": "^5.0.0-beta.6",
     "ts-helpers": "^1.1.1",
     "typings": "^1.0",
-    "webpack": "^1.13.1",
+    "webpack": "1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "zone.js": "^0.6.12"
   },
