--- a/package.json
+++ b/package.json
@@ -5,17 +5,9 @@
   "devDependencies": {
     "@angular/common": "2.0.0-rc.6",
     "@angular/compiler": "2.0.0-rc.6",
-    "@angular/core": "2.0.0-rc.6",
-    "@angular/forms": "2.0.0-rc.6",
+    "@angular/compiler": "2.0.0-rc.6",
     "@angular/platform-browser": "2.0.0-rc.6",
     "@angular/platform-browser-dynamic": "2.0.0-rc.6",
-    "awesome-typescript-loader": "1.1.1",
-    "babel-core": "^6.11.4",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
-    "chai": "^3.5.0",
-    "cross-env": "^2.0.0",
-    "immutable": "^3.8.1",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine-core": "^2.4.1",
     "karma": "^1.1.1",
@@ -27,7 +19,18 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-sourcemap-writer": "^0.1.2",
     "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^1.7.0",
+    "karma-webpack": "^1.7.0"
+  },
+  "dependencies": {
+    "@angular/core": "2.0.0-rc.6",
+    "@angular/forms": "2.0.0-rc.6",
+    "awesome-typescript-loader": "1.1.1",
+    "babel-core": "^6.11.4",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "chai": "^3.5.0",
+    "cross-env": "^2.0.0",
+    "immutable": "^3.8.1",
     "ng2-redux": "^3.3.2",
     "redux": "^3.0",
     "redux-logger": "^2.6.1",
@@ -41,10 +44,10 @@
     "zone.js": "^0.6.12"
   },
   "peerDependencies": {
-    "@angular/common": "^2.0.0-rc.5",
-    "@angular/compiler": "^2.0.0-rc.5",
-    "@angular/core": "^2.0.0-rc.5",
-    "@angular/forms": "^2.0.0-rc.5",
+    "@angular/common": "^2.0.0-rc.6",
+    "@angular/compiler": "^2.0.0-rc.6",
+    "@angular/core": "^2.0.0-rc.6",
+    "@angular/forms": "^2.0.0-rc.6",
     "redux": "^3.0"
   },
   "engines": {
