--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-redux-form",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Build Angular 2 forms with Redux",
   "devDependencies": {
     "@angular/common": "2.0.0-rc.6",
@@ -55,7 +55,7 @@
   },
   "scripts": {
     "prebuild": "npm run clean",
-    "build": "cross-env NODE_ENV=production webpack",
+    "build": "npm install && cross-env NODE_ENV=production webpack",
     "clean": "rimraf dist",
     "cover": "istanbul report --include=**/chrome/coverage-final.json text text-summary",
     "postinstall": "npm run typings && npm run build",
