--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "ng2-redux-form",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "Build Angular 2 forms with Redux",
   "devDependencies": {
     "@angular/common": "2.0.0-rc.6",
     "@angular/compiler": "2.0.0-rc.6",
-    "@angular/compiler": "2.0.0-rc.6",
     "@angular/platform-browser": "2.0.0-rc.6",
     "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+    "@angular/testing": "0.0.0-0",
+    "awesome-typescript-loader": "^1.1.1",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine-core": "^2.4.1",
     "karma": "^1.1.1",
@@ -19,12 +20,12 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-sourcemap-writer": "^0.1.2",
     "karma-spec-reporter": "0.0.26",
+    "karma-transform-path-preprocessor": "0.0.3",
     "karma-webpack": "^1.7.0"
   },
   "dependencies": {
     "@angular/core": "2.0.0-rc.6",
     "@angular/forms": "2.0.0-rc.6",
-    "awesome-typescript-loader": "1.1.1",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
