--- a/package.json
+++ b/package.json
@@ -67,5 +67,5 @@
     "typings": "rimraf typings && typings install"
   },
   "main": "source/index",
-  "typings": "source/index",
+  "typings": "source/index"
 }
