--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.16",
   "description": "Build Angular 2 forms with Redux",
   "devDependencies": {
-    "@angular/common": "2.0.0-rc.6",
-    "@angular/compiler": "2.0.0-rc.6",
-    "@angular/platform-browser": "2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/testing": "0.0.0-0",
     "awesome-typescript-loader": "^1.1.1",
     "istanbul-instrumenter-loader": "^0.2.0",
@@ -24,8 +24,8 @@
     "karma-webpack": "^1.7.0"
   },
   "dependencies": {
-    "@angular/core": "2.0.0-rc.6",
-    "@angular/forms": "2.0.0-rc.6",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
@@ -45,10 +45,10 @@
     "zone.js": "^0.6.12"
   },
   "peerDependencies": {
-    "@angular/common": "^2.0.0-rc.6",
-    "@angular/compiler": "^2.0.0-rc.6",
-    "@angular/core": "^2.0.0-rc.6",
-    "@angular/forms": "^2.0.0-rc.6",
+    "@angular/common": "^2.0.0",
+    "@angular/compiler": "^2.0.0",
+    "@angular/core": "^2.0.0",
+    "@angular/forms": "^2.0.0",
     "redux": "^3.0"
   },
   "engines": {
