--- a/examples/package.json
+++ b/examples/package.json
@@ -4,14 +4,37 @@
     "node": ">=6.0"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server -d --inline --progress --no-info",
-    "preinstall": "./module-links.sh"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server -d --inline --progress --no-info"
   },
   "devDependencies": {
-    "@angular/upgrade": "^2.0.0-rc.6",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "awesome-typescript-loader": "^1.1.1",
+    "babel-core": "^6.11.4",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "chai": "^3.5.0",
+    "cross-env": "^2.0.0",
+    "immutable": "^3.8.1",
+    "ng2-redux": "^3.3.2",
+    "raw-loader": "^0.5.1",
+    "redux": "^3.0",
+    "redux-logger": "^2.6.1",
+    "reflect-metadata": "^0.1.3",
+    "rimraf": "^2.5.4",
+    "rxjs": "5.0.0-beta.11",
+    "ts-helpers": "^1.1.1",
+    "typings": "^1.0",
+    "zone.js": "^0.6.12"
+  },
+  "dependencies": {
     "cross-env": "^2.0.0",
     "html-webpack-plugin": "^2.22.0",
     "raw-loader": "^0.5.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.16.2"
   }
 }
