--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -7,7 +7,10 @@
     "experimentalDecorators": true,
     "sourceMap": false,
     "inlineSourceMap": true,
-    "noEmitHelpers": true
+    "noEmitHelpers": true,
+    "declaration": true,
+    "outDir": "dist",
+    "rootDir": ""
   },
   "awesomeTypescriptLoaderOptions": {
     "emitRequireType": false,
