--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "rimraf": "^2.5.4",
     "rxjs": "5.0.0-beta.11",
     "ts-helpers": "^1.1.1",
+    "typescript": "^2.0.3",
     "webpack": "^2.1.0-beta.25",
     "zone.js": "^0.6.12"
   },
