--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-redux-form",
-  "version": "1.0.27",
+  "version": "1.0.28",
   "description": "Build Angular 2 forms with Redux",
   "devDependencies": {
     "@angular/common": "2.0.0",
@@ -41,7 +41,6 @@
     "reflect-metadata": "^0.1.3",
     "rimraf": "^2.5.4",
     "rxjs": "5.0.0-beta.11",
-    "ts-helpers": "^1.1.1",
     "typescript": "^2.0.3",
     "webpack": "^2.1.0-beta.25",
     "zone.js": "^0.6.12"
@@ -59,7 +58,7 @@
   },
   "scripts": {
     "prebuild": "npm run clean",
-    "build": "cross-env NODE_ENV=production webpack",
+    "build": "tsc",
     "clean": "rimraf dist",
     "cover": "istanbul report --include=**/chrome/coverage-final.json text text-summary",
     "postinstall": "npm run build",
@@ -68,6 +67,6 @@
     "posttest": "npm run cover",
     "test:watch": "cross-env NODE_ENV=development karma start --singleRun false"
   },
-  "main": "dist/main.js",
+  "main": "dist/source/index.js",
   "typings": "source/index"
 }
