--- a/examples/package.json
+++ b/examples/package.json
@@ -16,6 +16,7 @@
     "awesome-typescript-loader": "^2.2.4",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.5",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
     "cross-env": "^2.0.0",
