Upgrade all package versions and switch to @ngtools/webpack instead of awesome-typescript-loader. The example app is broken right now due to config issues but I will have to address that later

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "useBabel": true,
     "useCache": false
   },
+  "angularCompilerOptions": {},
   "exclude": [
     "node_modules",
     "dist",
