--- a/examples/package.json
+++ b/examples/package.json
@@ -4,37 +4,39 @@
     "node": ">=6.0"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server -d --inline --progress --no-info"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server -d --devtool=inline-source-map --inline --progress --no-info"
   },
   "devDependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "awesome-typescript-loader": "^2.2.4",
-    "babel-core": "^6.11.4",
-    "babel-loader": "^6.2.5",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.14.0",
+    "@angular/common": "^2.4.2",
+    "@angular/compiler": "^2.4.2",
+    "@angular/core": "^2.4.2",
+    "@angular/forms": "^2.4.2",
+    "@angular/platform-browser": "^2.4.2",
+    "@angular/platform-browser-dynamic": "^2.4.2",
+    "babel-polyfill": "^6.20.0",
     "chai": "^3.5.0",
-    "cross-env": "^2.0.0",
     "immutable": "^3.8.1",
-    "ng2-redux": "^3.3.2",
-    "raw-loader": "^0.5.1",
+    "ng2-redux": "^5.1.0",
     "redux": "^3.0",
     "redux-logger": "^2.6.1",
-    "reflect-metadata": "^0.1.3",
+    "reflect-metadata": "^0.1.9",
     "rimraf": "^2.5.4",
-    "rxjs": "5.0.0-beta.11",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.12"
+    "rxjs": "^5.0.1",
+    "zone.js": "^0.7.2"
   },
   "dependencies": {
+    "@angular/compiler-cli": "^2.4.2",
+    "@angular/router": "^3.4.2",
+    "@angular/tsc-wrapped": "^0.5.1",
+    "@ngtools/webpack": "^1.2.1",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
     "cross-env": "^2.0.0",
-    "html-webpack-plugin": "^2.22.0",
+    "html-webpack-plugin": "^2.26.0",
     "raw-loader": "^0.5.1",
-    "webpack-dev-server": "^1.16.2"
+    "typescript": "^2.1.4",
+    "webpack": "2.1.0-beta.26",
+    "webpack-dev-server": "^2.1.0-beta.9"
   }
 }
