--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.33",
   "description": "Build Angular 2 forms with Redux",
   "devDependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/testing": "0.0.0-0",
-    "ng2-redux": "^3.3.2",
+    "@angular/common": "^2.4.2",
+    "@angular/compiler": "^2.4.2",
+    "@angular/platform-browser": "^2.4.2",
+    "@angular/platform-browser-dynamic": "^2.4.2",
+    "ng2-redux": "^5.1.0",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine-core": "^2.4.1",
     "karma": "^1.1.1",
@@ -24,12 +23,15 @@
     "karma-webpack": "^1.7.0"
   },
   "dependencies": {
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
+    "@angular/compiler": "^2.4.2",
+    "@angular/compiler-cli": "^2.4.2",
+    "@angular/core": "^2.4.2",
+    "@angular/forms": "^2.4.2",
+    "@angular/tsc-wrapped": "^0.5.1",
+    "@ngtools/webpack": "^1.2.1",
     "@types/chai": "^3.4.34",
     "@types/jasmine": "^2.5.35",
     "@types/node": "^6.0.45",
-    "awesome-typescript-loader": "^2.2.4",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
@@ -40,17 +42,17 @@
     "redux-logger": "^2.6.1",
     "reflect-metadata": "^0.1.3",
     "rimraf": "^2.5.4",
-    "rxjs": "5.0.0-beta.11",
+    "rxjs": "^5.0.1",
     "typescript": "^2.0.3",
     "webpack": "^2.1.0-beta.25",
-    "zone.js": "^0.6.12"
+    "zone.js": "^0.7.2"
   },
   "peerDependencies": {
     "@angular/common": "^2.0.0",
     "@angular/compiler": "^2.0.0",
     "@angular/core": "^2.0.0",
     "@angular/forms": "^2.0.0",
-    "ng2-redux": "^3.3.2",
+    "ng2-redux": "^5.0",
     "redux": "^3.0"
   },
   "engines": {
@@ -58,7 +60,7 @@
   },
   "scripts": {
     "prebuild": "npm run clean",
-    "build": "tsc",
+    "build": "ngc",
     "clean": "rimraf dist",
     "cover": "istanbul report --include=**/chrome/coverage-final.json text text-summary",
     "postinstall": "npm run build",
