--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "ng2-redux-form",
-  "description": "Build Angular 2 forms with Redux",
+  "name": "@angular-redux/form",
+  "description": "Build Angular 2+ forms with Redux",
   "dependencies": {
     "cross-env": "^2.0.0",
     "rimraf": "^2.5.4",
     "webpack": "^1.13.1"
   },
   "devDependencies": {
-    "@angular/common": "^2.0.0-rc.2",
-    "@angular/compiler": "^2.0.0-rc.2",
-    "@angular/core": "^2.0.0-rc.2",
-    "@angular/forms": "^0.2.0",
-    "@angular/platform-browser": "^2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
+    "@angular-redux/store": "^5.1.0",
+    "@angular/common": "^2.4.1",
+    "@angular/compiler": "^2.4.1",
+    "@angular/core": "^2.4.1",
+    "@angular/forms": "^2.4.1",
+    "@angular/platform-browser": "^2.4.1",
+    "@angular/platform-browser-dynamic": "^2.4.1",
+    "@types/jasmine": "^2.5.40",
+    "@types/node": "^7.0.0",
     "awesome-typescript-loader": "1.0.0",
     "babel-core": "^6.11.4",
     "chai": "^3.5.0",
@@ -29,25 +32,24 @@
     "karma-sourcemap-writer": "^0.1.2",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
-    "ng2-redux": "^3.3.2",
-    "redux": "^3.0",
-    "redux-logger": "^2.6.1",
+    "redux": "^3.5.0",
+    "redux-logger": "^2.7.4",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.0.0-beta.0",
+    "rxjs": "^5.0.3",
     "ts-helpers": "^1.1.1",
     "typings": "^1.0",
     "webpack-dev-middleware": "^1.6.1",
-    "zone.js": "^0.6.12"
+    "zone.js": "^0.7.4"
   },
   "peerDependencies": {
-    "@angular/common": "^2.0.0-rc.2",
-    "@angular/compiler": "^2.0.0-rc.2",
-    "@angular/core": "^2.0.0-rc.2",
-    "@angular/forms": "^0.2.0",
-    "ng2-redux": "^3.3.2",
+    "@angular/common": "^2.4.1",
+    "@angular/compiler": "^2.4.1",
+    "@angular/core": "^2.4.1",
+    "@angular/forms": "^2.4.1",
+    "@angular-redux/store": "^5.1.0",
     "redux": "^3.0",
-    "rxjs": "^5.0.0-beta.0",
-    "zone.js": "^0.5.15"
+    "rxjs": "^5.0.3",
+    "zone.js": "^0.7.4"
   },
   "engines": {
     "node": ">=6.0"
