--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ng2-redux-form",
-  "version": "1.0.39",
+  "name": "@angular-redux/form",
+  "version": "5.1.0-beta.0",
   "description": "Build Angular 2 forms with Redux",
   "devDependencies": {
     "@angular/common": "^2.4.2",
@@ -22,6 +22,7 @@
     "karma-webpack": "^1.7.0"
   },
   "dependencies": {
+    "@angular-redux/store": "^5.1.0",
     "@angular/compiler": "^2.4.2",
     "@angular/compiler-cli": "^2.4.2",
     "@angular/core": "^2.4.2",
@@ -37,7 +38,6 @@
     "chai": "^3.5.0",
     "cross-env": "^2.0.0",
     "immutable": "^3.8.1",
-    "ng2-redux": "^5.1.0",
     "redux": "^3.0",
     "redux-logger": "^2.6.1",
     "reflect-metadata": "^0.1.3",
@@ -52,7 +52,7 @@
     "@angular/compiler": "^2.4.0",
     "@angular/core": "^2.4.0",
     "@angular/forms": "^2.4.0",
-    "ng2-redux": "^5.1.0",
+    "@angular-redux/store": "^5.1.0",
     "redux": "^3.0"
   },
   "engines": {
