--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@angular-redux/form",
-  "version": "5.1.0-beta.1",
-  "description": "Build Angular 2 forms with Redux",
+  "version": "6.0.0",
+  "description": "Build Angular2+ forms with Redux",
   "devDependencies": {
     "@angular/common": "^2.4.2",
     "@angular/compiler": "^2.4.2",
