--- a/examples/package.json
+++ b/examples/package.json
@@ -7,7 +7,8 @@
     "dev": "cross-env NODE_ENV=development webpack-dev-server -d --devtool=inline-source-map --inline --progress --no-info"
   },
   "devDependencies": {
-    "@angular-redux/store": "^5.1.0",
+    "@angular-redux/store": "^6.1.0-alpha.1",
+    "@angular-redux/form": "^6.1.0-alpha.0",
     "@angular/common": "^2.4.2",
     "@angular/compiler": "^2.4.2",
     "@angular/core": "^2.4.2",
