--- a/package.json
+++ b/package.json
@@ -1,12 +1,24 @@
 {
   "name": "@angular-redux/form",
-  "version": "6.0.1",
+  "version": "6.1.0-alpha.6",
   "description": "Build Angular 2+ forms with Redux",
+  "dependencies": {
+    "immutable": "^3.8.1"
+  },
   "devDependencies": {
-    "@angular/common": "^2.4.2",
-    "@angular/compiler": "^2.4.2",
-    "@angular/platform-browser": "^2.4.2",
-    "@angular/platform-browser-dynamic": "^2.4.2",
+    "@types/chai": "^3.4.34",
+    "rimraf": "^2.5.4",
+    "babel-core": "^6.11.4",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/tsc-wrapped": "^4.0.0",
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine-core": "^2.4.1",
     "karma": "^1.1.1",
@@ -19,40 +31,27 @@
     "karma-sourcemap-writer": "^0.1.2",
     "karma-spec-reporter": "0.0.26",
     "karma-transform-path-preprocessor": "0.0.3",
-    "karma-webpack": "^1.7.0"
-  },
-  "dependencies": {
-    "@angular-redux/store": "^6.0.0",
-    "@angular/compiler": "^2.4.2",
-    "@angular/compiler-cli": "^2.4.2",
-    "@angular/core": "^2.4.2",
-    "@angular/forms": "^2.4.2",
-    "@angular/tsc-wrapped": "^0.5.1",
+    "karma-webpack": "^1.7.0",
+    "@angular-redux/store": "^6.1.0-alpha.1",
     "@ngtools/webpack": "^1.2.1",
-    "@types/chai": "^3.4.34",
     "@types/jasmine": "^2.5.35",
     "@types/node": "^6.0.45",
-    "babel-core": "^6.11.4",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
     "cross-env": "^2.0.0",
-    "immutable": "^3.8.1",
     "redux": "^3.0",
     "redux-logger": "^2.6.1",
     "reflect-metadata": "^0.1.3",
-    "rimraf": "^2.5.4",
     "rxjs": "^5.0.1",
-    "typescript": "^2.0.3",
+    "typescript": "^2.1.0",
     "webpack": "^2.1.0-beta.25",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.8.4"
   },
   "peerDependencies": {
-    "@angular/common": "^2.4.0",
-    "@angular/compiler": "^2.4.0",
-    "@angular/core": "^2.4.0",
-    "@angular/forms": "^2.4.0",
-    "@angular-redux/store": "^6.0.0",
+    "@angular/common": "^2.4.0 || ^4.0.0",
+    "@angular/compiler": "^2.4.0 || ^4.0.0",
+    "@angular/core": "^2.4.0 || ^4.0.0",
+    "@angular/forms": "^2.4.0 || ^4.0.0",
+    "@angular-redux/store": "^6.1.0-alpha.0",
     "redux": "^3.0"
   },
   "engines": {
@@ -63,12 +62,14 @@
     "build": "ngc",
     "clean": "rimraf dist",
     "cover": "istanbul report --include=**/chrome/coverage-final.json text text-summary",
-    "postinstall": "npm run build",
     "pretest": "rimraf coverage",
     "test": "cross-env NODE_ENV=development karma start --singleRun true",
     "posttest": "npm run cover",
-    "test:watch": "cross-env NODE_ENV=development karma start --singleRun false"
+    "test:watch": "cross-env NODE_ENV=development karma start --singleRun false",
+    "prepublish": "npm run build"
   },
   "main": "dist/source/index.js",
-  "typings": "source/index"
+  "typings": "source/index",
+  "repository": "https://github.com/angular-redux/form",
+  "license": "MIT"
 }
