fix: add typescript unused checks
The library currently does not work in projects that have noUnusedLocals and noUnusedParameters set inside of tsconfig.json. This should bring the project into compliance with those rules.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,9 @@
     "inlineSourceMap": true,
     "declaration": true,
     "outDir": "dist",
-    "rootDir": ""
+    "rootDir": "",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   },
   "awesomeTypescriptLoaderOptions": {
     "emitRequireType": false,
