Turn tsconfig settings to 11
* `"strict": true,`
* `"noUnusedLocals": true,`
* `"noUnusedParameters": true,`
* `"forceConsistentCasingInFileNames": true,`

Also updated to typescript 2.4.1.

Also simplify the implementation of composeReducers. The composed reducer will assemble initial state automatically during Redux initialization; we don't need to do all that state manipulation manually.

Fixes #26

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,14 @@
     "declaration": true,
     "outDir": "dist",
     "rootDir": "",
+    "strict": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
+    "forceConsistentCasingInFileNames": true,
+    "pretty": true,
+
+    // Work around an issue in Angular itself with TS 2.4.1.
+    "skipLibCheck": true
   },
   "awesomeTypescriptLoaderOptions": {
     "emitRequireType": false,
