fix: typings entry point and failing definitions
Also adds stricter ngc build rules to ensure correct metadata emit.

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "prepublish": "npm run build"
   },
   "main": "dist/source/index.js",
+  "typings": "dist/source/index.d.ts",
   "repository": "https://github.com/angular-redux/form",
   "license": "MIT"
 }
