--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,10 @@
     "useBabel": true,
     "useCache": false
   },
-  "angularCompilerOptions": {},
+  "angularCompilerOptions": {
+    "strictMetadataEmit": true,
+    "skipTemplateCodegen": true
+  },
   "exclude": [
     "node_modules",
     "dist",
