--- a/package.json
+++ b/package.json
@@ -42,16 +42,16 @@
     "reflect-metadata": "^0.1.3",
     "rimraf": "^2.5.4",
     "rxjs": "^5.0.1",
-    "typescript": "^2.4.1",
-    "webpack": "^2.1.0-beta.25",
+    "typescript": "2.4.2",
+    "webpack": "2",
     "zone.js": "^0.8.4"
   },
   "peerDependencies": {
     "@angular-redux/store": "^6.3.0",
-    "@angular/common": "^2.4.0 || ^4.0.0",
-    "@angular/compiler": "^2.4.0 || ^4.0.0",
-    "@angular/core": "^2.4.0 || ^4.0.0",
-    "@angular/forms": "^2.4.0 || ^4.0.0",
+    "@angular/common": "^2.4.0 || ^4.0.0 || ^5.0.0",
+    "@angular/compiler": "^2.4.0 || ^4.0.0  || ^5.0.0",
+    "@angular/core": "^2.4.0 || ^4.0.0 || ^5.0.0",
+    "@angular/forms": "^2.4.0 || ^4.0.0 || ^5p.0.0",
     "redux": "^3.0"
   },
   "engines": {
@@ -61,11 +61,12 @@
     "prebuild": "npm run clean",
     "build": "ngc",
     "clean": "rimraf dist",
-    "cover": "istanbul report --include=**/chrome/coverage-final.json text text-summary",
+    "cover":
+      "istanbul report --include=**/chrome/coverage-final.json text text-summary",
     "pretest": "rimraf coverage",
-    "test": "cross-env NODE_ENV=development karma start --singleRun true",
     "posttest": "npm run cover",
-    "test:watch": "cross-env NODE_ENV=development karma start --singleRun false",
+    "test:watch":
+      "cross-env NODE_ENV=development karma start --singleRun false",
     "prepublish": "npm run build"
   },
   "main": "dist/source/index.js",
