--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "immutable": "^3.8.1"
   },
   "devDependencies": {
-    "@angular-redux/store": "^6.3.0",
+    "@angular-redux/store": "6",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/compiler-cli": "^4.0.0",
@@ -47,11 +47,11 @@
     "zone.js": "^0.8.4"
   },
   "peerDependencies": {
-    "@angular-redux/store": "^6.3.0",
+    "@angular-redux/store": "^6.6.0",
     "@angular/common": "^2.4.0 || ^4.0.0 || ^5.0.0",
     "@angular/compiler": "^2.4.0 || ^4.0.0  || ^5.0.0",
     "@angular/core": "^2.4.0 || ^4.0.0 || ^5.0.0",
-    "@angular/forms": "^2.4.0 || ^4.0.0 || ^5p.0.0",
+    "@angular/forms": "^2.4.0 || ^4.0.0 || ^5.0.0",
     "redux": "^3.0"
   },
   "engines": {
@@ -61,10 +61,12 @@
     "prebuild": "npm run clean",
     "build": "ngc",
     "clean": "rimraf dist",
-    "cover": "istanbul report --include=**/chrome/coverage-final.json text text-summary",
+    "cover":
+      "istanbul report --include=**/chrome/coverage-final.json text text-summary",
     "pretest": "rimraf coverage",
     "posttest": "npm run cover",
-    "test:watch": "cross-env NODE_ENV=development karma start --singleRun false",
+    "test:watch":
+      "cross-env NODE_ENV=development karma start --singleRun false",
     "prepublish": "npm run build"
   },
   "main": "dist/source/index.js",
