--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
   },
   "peerDependencies": {
     "@angular-redux/store": "^6.3.0",
-    "@angular/common": "^2.4.0 || ^4.0.0",
-    "@angular/compiler": "^2.4.0 || ^4.0.0",
-    "@angular/core": "^2.4.0 || ^4.0.0",
-    "@angular/forms": "^2.4.0 || ^4.0.0",
+    "@angular/common": "^2.4.0 || ^4.0.0 || ^5.0.0",
+    "@angular/compiler": "^2.4.0 || ^4.0.0 || ^5.0.0",
+    "@angular/core": "^2.4.0 || ^4.0.0 || ^5.0.0",
+    "@angular/forms": "^2.4.0 || ^4.0.0 || ^5.0.0",
     "redux": "^3.0"
   },
   "engines": {
