--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@angular-redux/form",
-  "version": "9.0.0-beta.0",
+  "version": "9.0.0",
   "description": "Build Angular 2+ forms with Redux",
   "dependencies": {
     "immutable": "^3.8.1"
   },
   "devDependencies": {
-    "@angular-redux/store": "^9.0.0-beta.0",
+    "@angular-redux/store": "^9.0.0",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/compiler-cli": "^6.0.3",
@@ -46,7 +46,7 @@
     "zone.js": "^0.8.26"
   },
   "peerDependencies": {
-    "@angular-redux/store": "^9.0.0-beta.0",
+    "@angular-redux/store": "^9.0.0",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
     "@angular/core": "^6.0.0",
