--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
   "name": "@angular-redux/form",
-  "version": "6.7.0",
+  "version": "9.0.0",
   "description": "Build Angular 2+ forms with Redux",
   "dependencies": {
     "immutable": "^3.8.1"
   },
   "devDependencies": {
-    "@angular-redux/store": "^6.3.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/tsc-wrapped": "^4.0.0",
-    "@ngtools/webpack": "^1.2.1",
+    "@angular-redux/store": "^9.0.0",
+    "@angular/common": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/compiler-cli": "^6.0.3",
+    "@angular/core": "^6.0.3",
+    "@angular/forms": "^6.0.3",
+    "@angular/platform-browser": "^6.0.3",
+    "@angular/platform-browser-dynamic": "^6.0.3",
+    "@ngtools/webpack": "^6.0.3",
     "@types/chai": "^3.4.34",
     "@types/jasmine": "^2.5.35",
     "@types/node": "^6.0.45",
@@ -37,22 +36,22 @@
     "karma-spec-reporter": "0.0.26",
     "karma-transform-path-preprocessor": "0.0.3",
     "karma-webpack": "^1.7.0",
-    "redux": "^3.0",
+    "redux": "^4.0",
     "redux-logger": "^2.6.1",
     "reflect-metadata": "^0.1.3",
     "rimraf": "^2.5.4",
-    "rxjs": "^5.0.1",
-    "typescript": "^2.4.1",
+    "rxjs": "^6.1.0",
+    "typescript": "2.7.2",
     "webpack": "^2.1.0-beta.25",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.26"
   },
   "peerDependencies": {
-    "@angular-redux/store": "^6.3.0",
-    "@angular/common": "^2.4.0 || ^4.0.0 || ^5.0.0",
-    "@angular/compiler": "^2.4.0 || ^4.0.0 || ^5.0.0",
-    "@angular/core": "^2.4.0 || ^4.0.0 || ^5.0.0",
-    "@angular/forms": "^2.4.0 || ^4.0.0 || ^5.0.0",
-    "redux": "^3.0"
+    "@angular-redux/store": "^9.0.0",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
+    "redux": "^4.0"
   },
   "engines": {
     "node": ">=6.0"
